--- a/index.qmd
+++ b/index.qmd
@@ -45,7 +45,7 @@ head(patients_df)
 
 Let's use data to figure out which surgeon performs better. @fig-plot-outcomes shows the post-surgical symptom score for 100 patients. Doc Duck's average post-surgical symptom score is 3.38 while Doc Dreamy's average is 2.8. Doc Dreamy performs better since lower scores indicate better outcomes. One might ask if the difference in average post-surgical symptom score is statistically significant. A two-sample t-test reveals a statistically significant difference (t = -2.317, p = 0.023).
 
-### Challenge Task 1: Recover Figure 1 — Post-Surgical Outcomes by Patient
+### Recover Figure 1: Post-Surgical Outcomes by Patient
 
 ```{r}
 #| label: fig-plot-outcomes
@@ -154,7 +154,7 @@ head(patients_randomized_df)
 
 @fig-plot-outcomes-randomized shows the post-surgical symptom score for 100 patients under randomized assignment. Doc Duck's average post-surgical symptom score is 2.71 while Doc Dreamy's average is 3.46. Doc Duck performs better since lower scores indicate better outcomes. With randomization breaking the confounding relationship, we can now properly assess the causal effect. A two-sample t-test reveals a statistically significant difference (t = 2.734, p = 0.007). **Not only is Dr. Dreamy not the better surgeon, he is actually the worse surgeon!**
 
-### Challenge Task 2: Recover Figure 2 — Randomized Assignment Outcomes
+### Recover Figure 2: Randomized Assignment Outcomes
 
 ```{r}
 #| label: fig-plot-outcomes-randomized
@@ -213,7 +213,7 @@ ggplot(patients_randomized_df, aes(x = patient, y = post_surgical_score,
 
 The key to handling a common cause confounder is to stratify by the common cause. In general, this means we examine the relationship between treatment and outcome within groups that share the same value of the confounder. In our example, this means we look at patients of similar severity and compare the outcomes of the surgeons for patients of similar severity. There are mathematically sophisticated ways to do this, but here we demonstrate it visually. Since patient number lacks inherent meaning, the following figure shows patient severity on the x-axis and post-surgical symptom score on the y-axis.
 
-### Challenge Task 3: Recover Figure 3 — Outcomes by Patient Severity (Stratification)
+### Recover Figure 3: Outcomes by Patient Severity (Stratification)
 
 ```{r}
 #| label: fig-plot-outcomes-severity
